test/positive/feature_packageimport.java

import java.util.*;

public class feature_packageimport {
  public feature_packageimport() {}
  protected Vector c;
}

