test/negative/ClassImplementsClass/A.java
import B.B;
public class A implements B {
    public A() {}
}
